feat(deploy): make the backend image deployable on Render
The image could not run on a PaaS host as it stood: it bound to a fixed port,
ran as root, sized the heap from the host's memory rather than the container's,
and started with an empty data directory that only a mounted volume could fill.

- Bind to $PORT when the host injects one, keeping SERVER_PORT for local use.
- Build from the repo root so the frozen data/xray-demo.duckdb.gz can be copied
  in; a root .dockerignore keeps data/raw (~617 MB) out of the build context.
- Expand the frozen database at startup rather than at build time, and only
  when the data directory has none, so a compose bind mount or a Render disk
  keeps its own copy. Compose still serves the full local xray.duckdb.
- Run as an unprivileged user, default to demo mode, and size the heap with
  MaxRAMPercentage so one image fits whatever instance it lands on.
- render.yaml as a blueprint: no persistent disk, no manual upload.